--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,124 @@
 
 @import "utilities/variables";
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background: linear-gradient(to right, #f0d3d1, white);
+    div{
+        header{
+            background-color: $color-header;
+            display: flex;
+            padding-right: 15px;
+            h1{
+                color: black;
+                text-align: center;
+                font-size: 5rem;
+                font-family: 'Waterfall', cursive;
+                font-weight: 600;
+                display: inline;
+                margin: 20px 50px; 
+            }
+            nav{
+                font-size: 1.3rem;
+                ul{
+                    li:hover{
+                        transform: translateY(2px);
+                        background-color: $color-botnav;
+                    }
+                }
+            }
+        }
+        div{
+            main{
+                div{
+                    p{
+                        text-align: center;
+                        font-family: 'Libre Baskerville', serif;
+                        font-size: 1.5rem;
+                        color: black; 
+                    }
+                }
+            }
+        }
+        div{
+            aside{
+                .publicidad__1--1{
+                    width: 300px;
+                    margin: 30px 60px;
+                }
+            }
+            aside{
+                .publicidad__2--2{
+                    width: 363px;
+                    margin: 30px 60px;
+                }
+            }
+            aside{
+                .publicidad__3--3{
+                    width: 330px;
+                    margin: 30px 60px;
+                }
+            }
+        }
+        footer{
+            background-color: $color-footer;
+            display: flex;
+            justify-content: center;
+            div{
+                .footer__redes--wp{
+                    color: $color-botnav;
+                    font-size: 2.7rem;
+                    margin: 35px 10px;
+                }
+                .footer__redes--wp:hover{
+                    transform: scale(1.4);
+                    transition: 1s;
+                    color: rgb(32, 133, 32);
+                }
+            }
+            div{
+                .footer__redes--insta{
+                    color: $color-botnav;
+                    font-size: 2.7rem;
+                    margin: 35px 10px;
+                }
+                .footer__redes--insta:hover{
+                    transform: scale(1.4);
+                    transition: 1s;
+                    background: -webkit-linear-gradient(rgb(170, 53, 224), rgb(235, 213, 23));
+                    -webkit-background-clip: text;
+                   -webkit-text-fill-color: transparent;
+                }
+            }
+            div{
+                .footer__redes--face{
+                    color: $color-botnav;
+                    font-size: 2.7rem;
+                    margin: 35px 10px;
+                }
+                .footer__redes--face:hover{
+                    transform: scale(1.4);
+                    transition: 1s;
+                    color: rgb(31, 84, 230);
+                }
+            }
+            div{
+                .footer__redes--messe{
+                    color: $color-botnav;
+                    font-size: 2.7rem;
+                    margin: 35px 10px;
+                }
+                .footer__redes--messe:hover{
+                    transform: scale(1.4);
+                    transition: 1s;
+                    color: rgb(30, 57, 133);
+                }
+            }
+        }
+    }
+}
