--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,18 @@
+@charset "UTF-8";
+body div .quiesom div {
+  text-align: center;
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.5rem; }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 body {
-  background: linear-gradient(to right, #f0d3d1, white); }
+  background-image: url(../img/fondo2.jpg); }
   body div header {
-    background-color: #f3b6b0;
+    background-color: #bd8bd1;
     display: flex;
     padding-right: 15px; }
     body div header h1 {
@@ -17,16 +23,36 @@ body {
       font-weight: 600;
       display: inline;
       margin: 20px 50px; }
+      @media screen and (max-width: 1231px) {
+        body div header h1 {
+          font-size: 4rem;
+          margin: 15px 40px; } }
+      @media screen and (max-width: 497px) {
+        body div header h1 {
+          font-size: 2.5rem;
+          margin: 4px 15px; } }
     body div header nav {
-      font-size: 1.3rem; }
+      font-size: 1.3rem;
+      font-family: 'Nunito', sans-serif;
+      padding: 1rem; }
+      @media screen and (max-width: 1231px) {
+        body div header nav {
+          font-size: 1rem; } }
       body div header nav ul li:hover {
-        transform: translateY(2px);
-        background-color: #eae1ce; }
-  body div div main div p {
+        transform: translateY(5px); }
+        body div header nav ul li:hover a:hover {
+          color: white !important; }
+  body div main div div p {
     text-align: center;
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 1.5rem;
     color: black; }
+    @media screen and (max-width: 1231px) {
+      body div main div div p {
+        font-size: 1.3; } }
+    @media screen and (max-width: 497px) {
+      body div main div div p {
+        font-size: 1rem; } }
   body div div aside .publicidad__1--1 {
     width: 300px;
     margin: 30px 60px; }
@@ -37,40 +63,141 @@ body {
     width: 330px;
     margin: 30px 60px; }
   body div footer {
-    background-color: #eb7375;
-    display: flex;
-    justify-content: center; }
-    body div footer div .footer__redes--wp {
-      color: #eae1ce;
-      font-size: 2.7rem;
-      margin: 35px 10px; }
-    body div footer div .footer__redes--wp:hover {
-      transform: scale(1.4);
-      transition: 1s;
-      color: #208520; }
-    body div footer div .footer__redes--insta {
-      color: #eae1ce;
-      font-size: 2.7rem;
-      margin: 35px 10px; }
-    body div footer div .footer__redes--insta:hover {
-      transform: scale(1.4);
-      transition: 1s;
-      background: -webkit-linear-gradient(#aa35e0, #ebd517);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; }
-    body div footer div .footer__redes--face {
-      color: #eae1ce;
-      font-size: 2.7rem;
-      margin: 35px 10px; }
-    body div footer div .footer__redes--face:hover {
-      transform: scale(1.4);
-      transition: 1s;
-      color: #1f54e6; }
-    body div footer div .footer__redes--messe {
-      color: #eae1ce;
-      font-size: 2.7rem;
-      margin: 35px 10px; }
-    body div footer div .footer__redes--messe:hover {
-      transform: scale(1.4);
-      transition: 1s;
-      color: #1e3985; }
+    background-color: #9dd4cb; }
+    body div footer div div {
+      display: flex;
+      justify-content: center; }
+      body div footer div div div .footer__redes--wp {
+        color: #813399;
+        font-size: 2.7rem;
+        padding: 5px 10px;
+        margin-top: 10px; }
+        @media screen and (max-width: 768px) {
+          body div footer div div div .footer__redes--wp {
+            font-size: 2.2rem;
+            padding: 3px 7px;
+            margin-top: 7px; } }
+      body div footer div div div .footer__redes--wp:hover {
+        transform: scale(1.4);
+        transition: 1s;
+        color: #208520; }
+      body div footer div div div .footer__redes--insta {
+        color: #813399;
+        font-size: 2.7rem;
+        padding: 5px 10px;
+        margin-top: 10px; }
+        @media screen and (max-width: 768px) {
+          body div footer div div div .footer__redes--insta {
+            font-size: 2.2rem;
+            padding: 3px 7px;
+            margin-top: 7px; } }
+      body div footer div div div .footer__redes--insta:hover {
+        transform: scale(1.4);
+        transition: 1s;
+        background: -webkit-linear-gradient(#aa35e0, #ebd517);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      body div footer div div div .footer__redes--face {
+        color: #813399;
+        font-size: 2.7rem;
+        padding: 5px 10px;
+        margin-top: 10px; }
+        @media screen and (max-width: 768px) {
+          body div footer div div div .footer__redes--face {
+            font-size: 2.2rem;
+            padding: 3px 7px;
+            margin-top: 7px; } }
+      body div footer div div div .footer__redes--face:hover {
+        transform: scale(1.4);
+        transition: 1s;
+        color: #1f54e6; }
+      body div footer div div div .footer__redes--messe {
+        color: #813399;
+        font-size: 2.7rem;
+        padding: 5px 10px;
+        margin-top: 10px; }
+        @media screen and (max-width: 768px) {
+          body div footer div div div .footer__redes--messe {
+            font-size: 2.2rem;
+            padding: 3px 7px;
+            margin-top: 7px; } }
+      body div footer div div div .footer__redes--messe:hover {
+        transform: scale(1.4);
+        transition: 1s;
+        color: #1e3985; }
+    body div footer div div p {
+      color: #813399;
+      font-family: 'Nunito', sans-serif; }
+      @media screen and (max-width: 768px) {
+        body div footer div div p {
+          font-size: 0.9rem; } }
+
+/* nuestros servicios */
+body div main h2 {
+  padding: 2rem 8rem;
+  font-family: 'Nunito', sans-serif;
+  font-size: 3rem; }
+  @media screen and (max-width: 1231px) {
+    body div main h2 {
+      font-size: 1.6rem;
+      margin: 1.5rem; } }
+  @media screen and (max-width: 768px) {
+    body div main h2 {
+      font-size: 1.4rem;
+      margin: 1rem;
+      padding: 1.5rem 5rem; } }
+
+body div main div h1 {
+  margin: 2rem;
+  margin-bottom: 1rem;
+  font-family: 'Nunito', sans-serif;
+  font-size: 2.5rem; }
+  @media screen and (max-width: 1231px) {
+    body div main div h1 {
+      font-size: 1.8rem;
+      margin: 1.5rem; } }
+  @media screen and (max-width: 768px) {
+    body div main div h1 {
+      font-size: 1.5rem;
+      margin: 1rem; } }
+
+body div main div div ul li {
+  font-size: 1.5rem; }
+  @media screen and (max-width: 1231px) {
+    body div main div div ul li {
+      font-size: 1.3rem; } }
+  @media screen and (max-width: 768px) {
+    body div main div div ul li {
+      font-size: 1.1rem; } }
+
+/* galería de imágenes */
+body div div div .galeriaimagenes__imagen--img {
+  width: 300px;
+  height: 300px;
+  margin: 1rem; }
+
+body div div div .galeriaimagenes__imagen--img:hover {
+  transform: scale(1.5);
+  transition: 1s; }
+
+/* contacto */
+body div .headercontacto {
+  background-color: #e4a1ba; }
+
+body .fondo {
+  background-image: url(../img/fondoformu.jpg); }
+  body .fondo div div .formulario {
+    padding: 1rem;
+    font-family: 'Libre Baskerville', serif; }
+    @media screen and (max-width: 1024px) {
+      body .fondo div div .formulario {
+        font-size: 0.8rem; } }
+
+/* quienes somos */
+@media screen and (max-width: 1357px) {
+  body div .quiesom div {
+    font-size: 1.3rem; } }
+
+@media screen and (max-width: 768px) {
+  body div .quiesom div {
+    font-size: 1.1rem; } }
